# ofxGgmlSam

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
.github/workflows/: evidence-promotion-advisor.yml  evidence-validation.yml
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md  SAM_WORKFLOWS.md
docs/releases/: v1.0.1.md
libs/sam.cpp/: README.md
libs/sam3.cpp/: README.md
ofxGgmlSamPointExample/: README.md  addons.make
ofxGgmlSamPointExample/src/: ofApp.cpp  ofApp.h
patches/: ggml-cuda-win-part-unpart.patch
scripts/: build-sam3-cpp.bat  build-sam3-cpp.ps1  doctor-sam.bat  doctor-sam.ps1  doctor-sam.sh  generate-sam-fixtures.bat  generate-sam-fixtures.ps1  generate-sam-fixtures.sh  install-sam-cpp.bat  install-sam-cpp.sh  install-sam3-cpp.bat  install-sam3-cpp.ps1  list-models.bat  list-models.ps1  list-models.sh  release-candidate.ps1  repair-point-example-vsproj.bat  repair-point-example-vsproj.ps1  run-point-example.bat  run-point-example.ps1  run-point-example.sh  run-sam3-evidence-pilot.bat  run-sam3-evidence-pilot.ps1  run-sam3-runtime-smoke.bat  run-sam3-runtime-smoke.ps1  run-sam3-runtime-smoke.sh  test-addon.ps1  test-doctor-sam.ps1  test-external-adapter-contract.bat  test-external-adapter-contract.ps1  test-external-adapter-contract.sh  test-external-batch.bat  test-external-batch.ps1  test-external-batch.sh  test-sam3-evidence-pilot.ps1  test-sam3-runtime-evidence.ps1  test-sam3-runtime-smoke.ps1  validate-local.ps1  write-sam3-runtime-evidence.bat  write-sam3-runtime-evidence.ps1
src/: ofxGgmlSam.h  ofxGgmlSamVersion.h
src/ofxGgmlSam/: ofxGgmlSam3Adapters.h  ofxGgmlSamCppAdapters.h  ofxGgmlSamExternalBackend.cpp  ofxGgmlSamExternalBackend.h  ofxGgmlSamInference.cpp  ofxGgmlSamInference.h  ofxGgmlSamTypes.h  ofxGgmlSamUtils.cpp  ofxGgmlSamUtils.h
tests/: CMakeLists.txt  test_external_adapter_contract.cpp  test_main.cpp
tests/fixtures/: README.md  sam-point-square.ppm
tools/ofxGgmlSam3RuntimeSmoke/: CMakeLists.txt  main.cpp
tools/ofxGgmlSamBatchExternal/: CMakeLists.txt  main.cpp
tools/ofxGgmlSamMockAdapter/: CMakeLists.txt  main.cpp
